cluster/apps/potber/potber-api/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: potber-api-staging
  namespace: potber
  labels:
    app: potber-api-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: potber-api-staging
  template:
    metadata:
      labels:
        app: potber-api-staging
    spec:
      containers:
        - name: potber-api-staging
          image: spuxx/potber-api:master-20230520-090722-6d21a135427ae576c7ff304d1d54d5e046c1f6ba # {"$imagepolicy": "potber:potber-api-staging"}
          ports:
            - containerPort: 3000
          securityContext:
            runAsNonRoot: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
