cluster/apps/potber/potber-api/staging/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: potber-api-staging
  namespace: potber
  app: potber-api-staging
spec:
  selector:
    app: potber-api-staging
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: metrics
      protocol: TCP
      port: 9100
      targetPort: 9100
