cluster/apps/potber/potber-api/staging/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: potber-api-staging
  namespace: potber
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($request_uri ~* "/metrics") {
        return 403;
      }
spec:
  tls:
    - hosts:
        - "*.potber.de"
      secretName: potber.de
  rules:
    - host: test-api.potber.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: potber-api-staging
                port:
                  name: http
